--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <tile>Profile Page</tile>
     </head>
     <body>
-        <link rel="stylesheet" href="Third.css">
+        <link rel="stylesheet" href="index.css">
         <h1> Vishnu's Profile <br>
             (0 ! 0)
         </h1>
